<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainPageActivity">



    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#937c7076"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.33"
            android:background="@mipmap/analytics"
            android:contentDescription="@string/binDetails"
            android:onClick="giveBinDetails" />

        <ImageView
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.33"
            android:background="@mipmap/analytics"
            android:contentDescription="@string/optimalRoute"
            android:onClick="findOptimalRoute" />


        <ImageView
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.33"
            android:background="@mipmap/analytics"
            android:contentDescription="@string/analytics"
            android:onClick="giveBinAnalytics" />

    </LinearLayout>

</LinearLayout>
